# adventofcode2023

./: Cargo.toml  README.md
day01/: Cargo.toml
day01/benches/: functional_vs_imperative.rs
day01/src/: first.rs  lib.rs  second.rs
day02/: Cargo.toml
day02/src/: first.rs  lib.rs  second.rs
day03/: Cargo.toml
day03/src/: first.rs  lib.rs
