[package]
name = "day02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[[bin]]
name = "day02_first"
path = "src/first.rs"

[[bin]]
name = "day02_second"
path = "src/second.rs"
